# my_generic_bist

./: README.md
app/: CMakeLists.txt  my_board_1.conf  my_board_2.conf  prj.conf
app/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  zephyr_modules.txt  zephyr_settings.txt
app/build_1/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.shield
app/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map  zephyr_pre1.elf  zephyr_pre1.map
app/build_1_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  zephyr_modules.txt
app/build_1_debug/Kconfig/: Kconfig.modules  Kconfig.shield.defconfig
app/build_1_debug/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_pre0.elf  (+3 more)
app/build_board_2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  zephyr_modules.txt
app/src/: bist_manager.c  bist_manager.h  main.c
(+272 files in other folders)
